fix:  bot responses wrap correctly if unhovered

--- a/botfront/imports/ui/components/stories/common/style.import.less
+++ b/botfront/imports/ui/components/stories/common/style.import.less
@@ -151,7 +151,9 @@
     .utterance-container {
         width: 50%;
         color: #212121;
-
+        .inner{
+            width: 100%;
+        }
         &:hover {
             width: ~"calc(50% + 20px)";
         }
